# llmSecurity

API_LLM/: API.py  API_test.py  dataset_analyser.py  jsonl_to_json.py  llm_responses.json  pyproject.toml  requirements.txt
API_LLM/datasets/: test.csv
FuzzyAI/: automatic_args_handler.py  automatic_tests.py  pyproject.toml  report.xlsx  run.py
FuzzyAI/fuzzy/: fuzzer.py  language.py  temperature.py  top_p.py  total_attack_time.txt
FuzzyAI/fuzzy/handlers/attacks/: __init__.py  base(original).py  enums.py  proto.py
FuzzyAI/fuzzy/handlers/attacks/actor_attack/: handler.py
FuzzyAI/fuzzy/handlers/attacks/artprompt/: handler.py
FuzzyAI/fuzzy/handlers/attacks/ascii_smuggling/: handler.py
FuzzyAI/fuzzy/handlers/attacks/back_to_the_past/: handler_EN.py  handler_PT.py
FuzzyAI/fuzzy/handlers/attacks/bon/: handler.py
FuzzyAI/fuzzy/handlers/attacks/crescendo/: handler_EN.py  handler_PT.py  prompts_EN.py  prompts_PT.py
FuzzyAI/fuzzy/handlers/attacks/dan/: handler_EN.py  handler_PT.py
FuzzyAI/fuzzy/handlers/attacks/default/: handler.py
FuzzyAI/fuzzy/handlers/attacks/genetic/: handler.py
FuzzyAI/fuzzy/handlers/attacks/gpt_fuzzer/: handler.py
FuzzyAI/fuzzy/handlers/attacks/hallucinations/: prompt_PT.py  (+2 more)
FuzzyAI/fuzzy/utils/: utils(original+diretoria).py  utils.py
FuzzyAI/resources/: 10prompts.txt  10prompts_en.txt  adv_bench_sub_gpt3.5.jsonl  adv_bench_sub_gpt4.jsonl  adv_bench_sub_llama2.jsonl  llama2-uncensored-prompt-response-t0-portuguese.jsonl  translate.py
graficos/: BD_testes.xlsx  BD_testes_automatic.xlsx  BD_testes_pre_classifier.xlsx  graficos.py
(+23 files in other folders)
